brain/sources/prod-metadata/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>