brain/sources/prod-metadata/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resume Edit</fullName>
            </value>
            <value>
                <fullName>LinkedIn Edit</fullName>
            </value>
            <value>
                <fullName>Experience Adjustment</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Priority Change</fullName>
            </value>
            <value>
                <fullName>Warning (Responsiveness)</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Missed Session</fullName>
            </value>
            <value>
                <fullName>Skill Gap</fullName>
            </value>
            <value>
                <fullName>Track Change</fullName>
            </value>
            <value>
                <fullName>Inactive / No Response</fullName>
            </value>
            <value>
                <fullName>Seriousness / Commitment</fullName>
            </value>
            <value>
                <fullName>Direct Bypass (Text/Email)</fullName>
            </value>
            <value>
                <fullName>Recording Request</fullName>
            </value>
            <value>
                <fullName>Support Mandatory</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Proxy Exception (One-off)</fullName>
            </value>
            <value>
                <fullName>Signature Pending</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Plan Upgrade</fullName>
            </value>
            <value>
                <fullName>Policy Clarification</fullName>
            </value>
            <value>
                <fullName>Legal Warning</fullName>
            </value>
            <value>
                <fullName>Policy Breach</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Evidence Request</fullName>
            </value>
            <value>
                <fullName>New Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>