brain/sources/prod-metadata/objects/Case/fields/Case_Tags__c.field-meta.xml
<CustomField>
    <fullName>Case_Tags__c</fullName>
    <label>Case Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Agreement Breach Risk</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Support Exception</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Smart Team Directive</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>