brain/sources/prod-metadata/objects/Case/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>Deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>