brain/sources/prod-metadata/objects/Case/fields/Last_Priority_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_Priority_Change_Reason__c</fullName>
    <label>Last Priority Change Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>