brain/sources/prod-metadata/objects/Case/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing</label>
    <referenceTo>Marketing__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>