brain/sources/prod-metadata/objects/Case/fields/Slack_Thread_Ts__c.field-meta.xml
<CustomField>
    <fullName>Slack_Thread_Ts__c</fullName>
    <externalId>true</externalId>
    <label>Slack Thread Ts</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>