brain/sources/prod-metadata/objects/Case/fields/Waiting_On__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On__c</fullName>
    <label>Waiting On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Vendor/Client</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>